<resources>
    <string name="app_name">ResultKing</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="satta_king">SATTA KING</string>
    <string name="super_fast_king">SUPER FAST KING</string>
    <string name="satta_king_first">SATTA KING FIRST</string>
    <string name="satta_number">SATTA NUMBER</string>
    <string name="satta_lagao">SATTA LAGAO</string>
    <string name="lucky_number">Lucky Number</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sattababa">SATTA BABA</string>
</resources>