<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.resultking.ui.sattaking.HomeFragment"
        android:label="@string/satta_king"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.resultking.ui.superfastking.GalleryFragment"
        android:label="@string/super_fast_king"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.resultking.ui.sattakingfirst.SlideshowFragment"
        android:label="@string/satta_king_first"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/sattaNumberFragment"
        android:name="com.example.resultking.Fragment.sattaLagaoFragment"
        android:label="@string/sattababa"
        tools:layout="@layout/fragment_satta_lagao" />
    <fragment
        android:id="@+id/sattaLagaoFragment"
        android:name="com.example.resultking.Fragment.sattaNumberFragment"
        android:label="@string/satta_lagao"
        tools:layout="@layout/fragment_satta_number" />
</navigation>